fix: add null checks and 404 handling for owner lookup